--- a/FicherosTFG/bibliografia.bib
+++ b/FicherosTFG/bibliografia.bib
@@ -12,51 +12,43 @@ abstract = {Digital sound synthesis has long been approached using standard digi
 @book{Software,
 author={Nakamura,Shoichiro},
 year={1992},
-title={Métodos num{\'e}ricos aplicados con software},
+title={M{\'e}todos num{\'e}ricos aplicados con software},
 publisher={Prentice-Hall Hispanoamericana},
-address={M{\'e}xico},
 keywords={An{\'a}lisis num{\'e}rico; Proceso de datos},
 isbn={9688802255;9789688802250;},
 language={Spanish},
 }
 
-@inproceedings{Carreo2012AcercaDA,
-  title={Acerca de algunas soluciones de ciertas ecuaciones de onda},
-  author={Juan Carlos Solares Carre{\~n}o and Rosalba Mendoza Su{\'a}res},
-  year={2012}
-}
+@article{Carreo2012AcercaDA, 
+title={Acerca de algunas soluciones de ciertas ecuaciones de onda}, 
+volume={19}, 
+url={https://revistas.unal.edu.co/index.php/bolma/article/view/40861},
+ number={2},
+ journal={Bolet{\'i}n de Matem{\'a}ticas}, 
+author={Juan Carlos Solares Carre{\~n}o and Rosalba Mendoza Su{\'a}res},
+year={2012}, 
+month={jul.}}
 
-@inproceedings{MartinDomingo,
-  title={Apuntes de vibraciones y ondas},
-  author={Agust{\'i}n} Mart{\'i}n Domingo,
-  year={2020},
-  url={http://oa.upm.es/63585/}
-}
+@book{MartinDomingo,
+           title = {Apuntes de vibraciones y ondas},
+       publisher = {El autor},
+            year = {2020},
+           month = {Septiembre},
+         address = {Madrid},
+          author = {Mart{\'i}n Domingo, Agust{\'i}n},
+        keywords = {F{\'i}sica, Mec{\'a}nica, Ondas, Vibraciones},
+             url = {https://oa.upm.es/63585/},
+        abstract = {Las primeras versiones de estos apuntes de vibraciones y ondas comenzaron a escribirse para la asignatura "F{\'i}sica de las Construcciones", del plan 1996 de Arquitectura y han sido posteriormente ampliadas en muy distintos aspectos.}
 
 
-@book{vankka2005digital,
-  title={Digital Synthesizers and Transmitters for Software Radio},
-  author={Vankka, J.},
-  isbn={9781402031946},
-  lccn={2006275890},
-  url={https://books.google.es/books?id=Fp02e9dnf9EC},
-  year={2005},
-  publisher={Springer US}
-}
+
 
 @inproceedings{Camarena2004LaTD,
   title={La transferencia del conocimiento: ecuaciones diferenciales parciales hacia una cuerda que vibra},
   author={Patricia Camarena},
+ journal={Acta Latinoamericana de Matem{\'a}tica Educativa}, 
+pages = {156-162},
   year={2004}
-}
-
-@book{van2006network,
-  title={Network Analysis 3rd Edition},
-  author={Van Valkenburg, M.E.},
-  isbn={9788131701584},
-  url={https://books.google.es/books?id=59KKSQAACAAJ},
-  year={2006},
-  publisher={Pearson Education}
 }
 
 @book{Wazwaz,
@@ -71,7 +63,7 @@ doi = {10.1007/978-3-642-00251-9}
 }
 
 @book{AnIntroduction,
-author={Morton,K. W. and Mayers,D. F. and Mayers,D. F.},
+author={Morton,K. W. and Mayers,D. F.},
 year={2005},
 title={Numerical solution of partial differential equations: an introduction},
 publisher={Cambridge University Press},
@@ -163,9 +155,7 @@ author={Larsson,Stig and Thom{\'e}e,Vidar},
 year={2009},
 title={Partial differential equations with numerical methods},
 publisher={Springer},
-address={Berlin},
 volume={45},
-edition={1st softcover pr.},
 abstract={This is the softcover reprint of the very popular hardcover edition. The book is suitable for advanced undergraduate and beginning graduate students of applied mathematics and engineering. The main theme is the integration of the theory of linear PDEs and the numerical solution of such equations. For each type of PDE, elliptic, parabolic, and hyperbolic, the text contains one chapter on the mathematical theory of the differential equation, followed by one chapter on finite difference methods and one on finite element methods. As preparation, the two-point boundary value problem and the initial-value problem for ODEs are discussed in separate chapters. There is also one chapter on the elliptic eigenvalue problem and eigenfunction expansion. The presentation does not presume a deep knowledge of mathematical and functional analysis. Some background on linear functional analysis and Sobolev spaces, and also on numerical linear algebra, is reviewed in two appendices. Very well-written Elementary introduction},
 keywords={Ecuaciones diferenciales; Ecuaciones en derivadas parciales; Soluciones numéricas},
 isbn={3540887059;9783540887058;},
@@ -189,24 +179,9 @@ author={Ganzha,Victor G. and Vorozhtsov,Evgenii V.},
 year={1996},
 title={Numerical solutions for partial differential equations: problem solving using Mathematica},
 publisher={CRC Press},
-address={Boca Raton (Florida) [etc.]},
 keywords={Ecuaciones en derivadas parciales; Matemáticas; Matemáticas computacionales; Mathematica (Lenguaje de programación); Proceso de datos},
 isbn={0849373794;9780849373794;},
 language={English},
-}
-
-@article{CHEN,
-title = {A reflected wave superposition method for vibration and energy of a travelling string},
-journal = {Journal of Sound and Vibration},
-volume = {400},
-pages = {40-57},
-year = {2017},
-issn = {0022-460X},
-doi = {https://doi.org/10.1016/j.jsv.2017.03.046},
-url = {https://www.sciencedirect.com/science/article/pii/S0022460X17303012},
-author = {E.W. Chen and Q. Luo and N.S. Ferguson and Y.M. Lu},
-keywords = {Travelling string, Boundary condition, Propagating wave, Finite length, d’Alembert method, Mechanical energy},
-abstract = {This paper considers the analytical free time domain response and energy in an axially translating and laterally vibrating string. The domain of the string is either a constant or variable length, dependent upon the general initial conditions. The translating tensioned strings possess either fixed-fixed or fixed-free boundaries. An alternative analytical solution using a reflected wave superposition method is presented for a finite translating string. Firstly, the cycles of vibration for both constant and variable length strings are provided, which for the latter are dependent upon the variable string length. Each cycle is divided into three time intervals according to the magnitude and the direction of the translating string velocity. Applying d’Alembert's method combined with the reflection properties, expressions for the reflected waves at the two boundaries are obtained. Subsequently, superposition of all of the incident and reflected waves provides results for the free vibration of the string over the three time intervals. The variation in the total mechanical energy of the string system is also shown. The accuracy and efficiency of the proposed method are confirmed numerically by comparison to simulations produced using a Newmark-Beta method solution and an existing state space function representation of the string dynamics.}
 }
 
 @book{amara,
@@ -219,6 +194,84 @@ abstract = {This paper considers the analytical free time domain response and en
   publisher={Jones \& Bartlett Learning}
 }
 
+@book{mcowen,
+  title={Partial Differential Equations: Methods and Applications},
+  author={McOwen, R.C.},
+  isbn={9787302099802},
+  url={https://books.google.es/books?id=TuNHsNC1Yf0C},
+  year={2004},
+  publisher={Tsinghua University Press}
+}
+
+@article{Seismic,
+author={Liu,Xiaobo and Chen,Jingyi and Zhao,Zhencong and Lan,Haiqiang and Liu,Fuping},
+year={2018},
+title={Simulating Seismic Wave Propagation in Viscoelastic Media with an Irregular Free Surface},
+journal={Pure and applied geophysics},
+volume={175},
+number={10},
+pages={3419-3439},
+isbn={0033-4553},
+}
+
+@book{acoustics,
+  title={Fundamentals of Acoustics},
+  author={Kinsler, L.E. and Frey, A.R. and Coppens, A.B. and Sanders, J.V.},
+  isbn={9780471847892},
+  lccn={99049667},
+  url={https://books.google.es/books?id=FecSEAAAQBAJ},
+  year={2000},
+  publisher={Wiley}
+}
+
+@book{optics,
+  title={Optics},
+  author={Hecht, E.},
+  isbn={9780133979121},
+  year={2016},
+  publisher={Pearson Education}
+}
+
+@book{FiniteElements,
+author={Ern,Alexandre and Guermond,Jean-Luc},
+year={2004},
+title={Theory and practice of finite elements},
+publisher={Springer},
+address={New York},
+volume={159},
+keywords={Ecuaciones en derivadas parciales; Método de los elementos finitos},
+isbn={0387205748;9780387205748;},
+language={English},
+}
+
+@book{NumericalModels,
+author={Quarteroni,Alfio and Hou,Tom and Le Bris,Claude},
+year={2009},
+title={Numerical Models Differential Problems},
+publisher={Springer Milan},
+volume={2},
+isbn={2037-5255},
+language={English},
+
+}
+
+@book{Finitedifference,
+
+author={Thomas,J. W.},
+
+year={1995},
+
+title={Numerical partial differential equations: Finite difference methods},
+
+publisher={Springer},
+
+volume={22},
+
+keywords={Ecuaciones diferenciales},
+
+isbn={0387979999;9780387979991;}
+
+}
 
 @comment{jabref-meta: selector_publisher:}
 
