--- a/FicherosTFG/resumen.tex
+++ b/FicherosTFG/resumen.tex
@@ -7,7 +7,7 @@ En este trabajo trataremos el estudio de la ecuación de onda en derivadas parcia
 
 A continuación, abordaremos aspectos como la ley de la conservación de la energía o las soluciones de tipo onda viajera.\\
 
-Luego, empleando el método de las diferencias finitas obtendremos una solución numérica de la ecuación de onda, haciendo una discretización en espacio y tiempo para aproximarla. También retomaremos los aspectos anteriormente nombrados desde este punto de vista. Seguiremos realizando una comparativa, gráfica y sonora de las aproximaciones obtenidas, cambiando los parámetros y condiciones obtenidas comprobar su efecto en la misma.\\
+Luego, empleando el método de las diferencias finitas obtendremos una solución numérica de la ecuación de onda, haciendo una discretización en espacio y tiempo para aproximarla. También retomaremos los aspectos anteriores desde este punto de vista. Seguiremos realizando una comparativa, gráfica y sonora de las aproximaciones obtenidas, cambiando los parámetros y condiciones obtenidas comprobar su efecto en la misma.\\
 
 Por último, presentaremos las conclusiones obtenidas a lo largo de este trabajo, resumiendo las observaciones y los resultados relevantes.
 
