--- a/FicherosTFG/05conclusiones.tex
+++ b/FicherosTFG/05conclusiones.tex
@@ -3,24 +3,25 @@
 
 \chapter{Conclusiones y proyectos futuros }
 \label{Conclusiones}
+A lo largo de este trabajo, hemos introducido conceptos importantes, tales como los espacios de Lebesgue y el producto interior, los hemos generalizado para el caso discreto, en un mallado definido para dicho ambiente.\\
 
-A lo largo de este trabajo, hemos examinado la solución numérica de la ecuación de onda mediante el método de las diferencias finitas, observando en \ref{sec:soluciones}, como se obtienen buenos resultados para la misma. Hemos comparado distintas condiciones iniciales que cumplen con los parámetros obtenidos mediante el análisis de Von Neumann \ref{sec:VonNeumann} y el análisis energético  \ref{energiadiscreta}, y hemos conseguido archivos de audio que lo corroboran.\\
+Se ha contextualizado la ecuación en derivadas parciales de onda, utilizando una perspectiva física. También se han analizado ciertas soluciones de la ecuación, y la Ley de la conservación de energía en la misma.\\
+
+Una vez hecho esto, hemos examinado la solución numérica de la ecuación de onda mediante el método de las diferencias finitas, observando en \ref{sec:soluciones}, como se obtienen buenos resultados para la misma. Hemos comparado distintas condiciones iniciales que cumplen con los parámetros obtenidos mediante el análisis de Von Neumann \ref{sec:VonNeumann} y hemos conseguido archivos de audio que corroboran la estabilidad dentro del marco obtenido.\\
 
 Por otro lado, hemos logrado la implementación de las soluciones de tipo onda viajera \ref{sec:solondaviajera}, de las que derivamos que la suma de las mismas describe inequívocamente el movimiento de la cuerda de nuestro esquema.\\
 
-A continuación hemos representado la relación entre la condición CFL y la inestabilidad de las soluciones, observando como pequeñas variaciones en ella generan dicha inestabilidad de forma acelerada.\\
-
-Por último se ha visualizado como si no se respeta la ley de la conservación de la energía, es decir, se incumplen las condiciones de contorno dadas en la sección \ref{energiadiscreta}, la solución numérica va perdiendo energía hasta pararse.(NO ESTOY SEGURA TENGO QUE COMPROBARLO CUANDO TERMINE LA SECCIÓN) Esto puede comprobarse en la sección \ref{sec:ComparacionEnergia}(COMPLETAR CUANDO ESTÉ HECHO)\\
+A continuación hemos representado la relación entre la condición CFL y la inestabilidad de las soluciones, observando como su incumplimiento llava a una aproximación muy mala que presenta multitud de oscilaciones espúreas.\\
 
 En definitiva, hemos podido realizar un estudio general de la ecuación de onda en derivadas parciales, abordando desde los conceptos fundamentales hasta la comprobación de como las condiciones teóricas encontradas afectan la solución numérica de la misma.\\
 
 Este estudio sería fácilmente ampliable tomando varios enfoques,
 
 \begin{itemize}
-	\item Utilizando argumentos similares a los encontrados en \cite{Optimal}, podríamos hablar de la controlabilidad y observabilidad de nuestro esquema, en lugar de en un ambiente semi-discreto como el que propone Enrique Zazua.
-	\item Se podría enriquecer el estudio comparando diferentes análisis usados asiduamente en el método de las diferencias finitas.
-	\item También sería interesante el uso de métodos de resolución diferentes, como por ejemplo los métodos espectrales.
-	\item Un enfoque menos teórico que se podría dar es, la utilización de los archivos .wav sintetizados para la creación de música, ya que hemos visto, que dependiendo de las condiciones iniciales, la forma de la onda obtenida cambia, de manera similar a como lo hace al tocar la misma nota en dos instrumentos diferentes.
+	\item Utilizando argumentos similares a los encontrados en \cite{Optimal}, podríamos hablar de la controlabilidad y observabilidad de nuestro esquema, en lugar de en un ambiente semi-discreto como el que propone Enrique Zuazua.
+	\item Se podría enriquecer el estudio comparando diferentes esquemas usados asiduamente en el método de las diferencias finitas, o revisando diversos conceptos para nuestro esquema, como la controlabilidad y la observabilidad \citep{Russell, Optimal}.
+	\item También sería interesante el uso de métodos de resolución diferentes, como por ejemplo los métodos espectrales, o elementos finitos \citep{Stig}.
+	\item Un enfoque más aplicado que se podría dar es, la utilización de los archivos .wav sintetizados para la creación de música, ya que hemos visto, que dependiendo de las condiciones iniciales, la forma de la onda obtenida cambia, de manera similar a como lo hace al tocar la misma nota en dos instrumentos diferentes.
 \end{itemize}
 
 
